--- a/.github/workflows/master_juniorj-py.yml
+++ b/.github/workflows/master_juniorj-py.yml
@@ -28,9 +28,10 @@ jobs:
         run: |
           python -m venv antenv
           source antenv/bin/activate
+          pip install -r requirements.txt
       
-      - name: Install dependencies
-        run: pip install -r requirements.txt
+      #- name: Install dependencies
+      #  run: pip install -r requirements.txt
         
       # Optional: Add step to run tests here (PyTest, Django test suites, etc.)
 
